--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,12 +53,13 @@
   <!-- CSS links -->
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css"/>
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/ed.css"/>
- 
+  <link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v3.1.0/dist/font-face.css" rel="stylesheet" type="text/css" />
+
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="180x180" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png"/>
-  <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico"/>
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.baseurl }}/atom.xml"/>
+
 </head>
