--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,4 +5,22 @@ layout: default
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   {{ content }}
+
+  <div id="disqus_thread"></div>
+
+<script>
+
+/*  var disqus_config = function () {
+    this.page.url = "{{site.baseurl}}{{ page.url }}";
+    this.page.identifier = "py4-ir";
+  };*/
+
+  (function() {
+    var d = document, s = d.createElement('script');
+    s.src = '//py4-ir.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+  })();
+</script>
+
 </div>
