--- a/public/css/ed.css
+++ b/public/css/ed.css
@@ -31,9 +31,10 @@ body {
 }
 
 html {
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-family: 'Vazir', sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  direction: rtl;
 }
 
 @media (min-width: 38em) {
@@ -51,6 +52,7 @@ body {
 
 .content {
 	margin-bottom: 4rem;
+  font-size: 15px;
 }
 
 /*
@@ -111,7 +113,6 @@ a:focus {
 /* Headings */
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   margin-bottom: .5rem;
   font-weight: 400; 
   font-size: 1.5rem;
@@ -304,7 +305,6 @@ tbody tr:nth-child(odd) th {
 }
 
 .masthead-title small {
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-size: 1rem;
   font-weight: 400;
   color: #c0c0c0;
@@ -312,7 +312,6 @@ tbody tr:nth-child(odd) th {
 }
 
 h3.masthead-title {
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	font-size: 1.8rem;
 	margin-top: 2px;
 }
@@ -810,5 +809,11 @@ ol.bibliography {
 	text-indent: -1rem;
 }
 
+a.hlink {
+	margin-left: 30px;
+	color: #80ffbf;
+}
 
-
+div.hlink_container {
+	background-color: black;
+}
